    - Fix "issue" in handling self-closing script tags in head (similar issue that we had with self-closing title tags)
    - Fix issue converting Qt Strings to their Python equivalent when outside the BMP
    - Fix issue with trying to add existing html files when names clash due to case insensitive file systems

   New Features
    - allow plugins to supply their own icon (plugin.png 48x48) for use on the Quick Launch Toolbar icons
    - extend plugin interface to include the status of the epub inside Sigil (modified or saved)
    - extend plugin interface to include the path to the saved epub file or the null string if never saved
    - extend Insert->Special Characters to include both a Greek letter panel and a mathematical symbol panel 
    - add support for calibre:series and calibre:series_index to Metadata Editor for epub2
    - add support for calibre:title_sort to Metadata Editor for epub2
    - add support for clicking internal links in Preview to load the proper destination tab


Sigil-0.9.9
   Bug Fixes
    - Add python_3.5_fixes3.patch to Python build and update build docs on OSX to fix missing symbols
    - Fix crash caused by Preview holding pointer to user removed resource when front tab is non-html resource
    - Fix crash in FlowTab destructor due to re-entering flowtab during Syntax Highlighting and signals
    - Fix issue with file icons disappearing when reordering in Book Browser (commit ecb56b1f)
    - Fix missing epub3 Manifest cover-image property setting/unsetting with BookBrowser
    - Fix issue where cancelling the SaveAs dialog disconnected an existing epub from its saved path
    - Fix assertion error in sigil-gumbo when handling extraneous script end tags
    - Apply multiple fixes for gumbo from upstream
    - Fix segfault in Split at Cursor when not an html file
    - Make sure Add Cover tool properly handles existing manifest cover properties in EPUB3s
    - Correct error dialog to say "Sigil may need to close."