@@ -96,7 +96,7 @@ public:
     void GrabFocus();
 
     // inherited
-    QList<ViewEditor::ElementIndex> GetCaretLocation();
+    QList<ViewEditor::ElementIndex> GetCaretLocation(bool normalize=false);
 
     // methods for working with and converting QWebPaths to ViewEditor::ElementIndex Lists 
     QList<ViewEditor::ElementIndex> ConvertQWebPathToHierarchy(const QString & webpath) const;
