@@ -12,6 +12,7 @@ Sigil-pre0.9.10
     - Fix "issue" in handling self-closing script tags in head (similar issue that we had with self-closing title tags)
     - Fix issue converting Qt Strings to their Python equivalent when outside the BMP
     - Fix issue with trying to add existing html files when names clash due to case insensitive file systems
+    - Fix crash bug after styling text in BookView and immediately going to CodeView without moving cursor
 
    New Features
     - allow plugins to supply their own icon (plugin.png 48x48) for use on the Quick Launch Toolbar icons
